--- a/code/homework-starter-doc_TEMPLATE.qmd
+++ b/code/homework-starter-doc_TEMPLATE.qmd
@@ -8,7 +8,7 @@ execute: # for all code chunks
     message: false # do not display messages
 ---
 
-**WARNING:** this document provides the foundation for your homework 3, but you will need to create your own neat, organized document to render for your homework submission. Create a new document for your homework in the `code` folder of this repository.   
+**WARNING:** this document provides the foundation for your homework 3, but you will need to create your own neat, organized document to render for your homework submission. Create a new document for your homework in the `code` folder of this repository.
 
 **You will not need all the information in this document to do your homework; IT IS YOUR JOB TO EDIT THE INFORMATION IN YOUR HOMEWORK DOCUMENT TO ONLY INCLUDE WHAT IS NECESSARY.**    
 
@@ -95,11 +95,11 @@ ggpairs(drought_exp_clean, # data frame
 
 Choose 3 pairs of variables to compare. Make notes of those comparisons below.    
 
-**insert comparison 1 here**  
+**Root mass (g) is strongly, positively correlated with total mass (Pearsons' r = 0.86). **  
 
-**insert comparison 2 here**  
+**Shoot mass (g) is strongly, positively correlated with total mass (Pearsons' r = 0.9).**  
 
-**insert comparison 3 here**
+**Root mass (g) is strongly, positively correlated with shoot mass (Pearsons' r = 0.55)**
 
 ## Preliminary visualizations  
 
